completed sections on heat flow, hydrothermal systems

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,9 +1,13 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
+\newacronym{doe}{DOE}{United States Department of Energy}
 \newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ghg}{GHG}{Greenhouse Gas}
+\newacronym{gdh}{GDH}{Geothermal District Heating}
 \newacronym{gto}{GTO}{Geothermal Technologies Office}
 \newacronym{ieo}{IEO}{International Energy Outlook}
+\newacronym{irena}{IRENA}{International Renewable Energy Agency}
+\newacronym{kgra}{KGRAs}{Known Geothermal Resource Areas}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
