--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -53,12 +53,15 @@ Most fundamentally, geothermal energy offers a reliable, nearly inexhaustible re
 For all its benefits, the use of geothermal energy comes with its own unique set of challenges and risks. Many mirror the challenges faced by oil and gas producers, like issues related to drilling equipment and borehole integrity. For every well drilled, there is the risk of low resource quality, poor reservoir productivity, unexpected structural and stratigraphic complexity, and undesirable fluid chemistry \citep{beckers_low-temperature_2016, hadi_resource_2010}. Similarities between petroleum and geothermal development extend into unconventionals/EGS, where risks around hydrofracturing include inadequate permeable rock volume within the stimulated fracture zone, short-circuiting of fluid flow between injection and productions wells, fluid losses within the subsurface, and induced seismic activity \citep{jelacic_evaluation_2008,pan_establishment_2019}. As in oil \& gas projects, the former set of challenges could be mitigated by an appropriate level of subsurface characterization, and the latter would benefit from high-resolution reservoir and fracture modeling. Note that this overlap in challenges and required skill sets between oil \& gas and geothermal is unique among all renewable energy options. Skill and knowledge transfer between the two domains could directly benefit geothermal operations and risk mitigation strategies \citep{petty_synergies_2009}. And adding geothermal to the overall asset portfolio provides a simplified pathway for Upstream companies to meet net zero commitments while retaining and utilizing existing talent.
 
 One of the most significant uncertainties for geothermal is cost. The scope of an LCOE assessment considers all costs in a geothermal project, from early exploration, through development drilling and power plant construction, to operations and maintenance over a 25 to 30-year lifetime \citep{beckers_introducing_2013, entingh_volume_2006, tester_economic_1990}. Studies show drilling of exploration, confirmation, injection, and production wells can account for 60-75\% of the total EGS project cost \citep{lukawski_uncertainty_2016, petty_synergies_2009}. New drilling technologies being developed may help address both cost uncertainty and potential value ranges \citep{nrel_2020_2020}. However, significant project savings could be achieved through better characterization prior to drilling that first exploration well; increasing the probability of well success without multi-million dollar well failures could bring down the overall LCOE. In addition, choices in the design of the geothermal power plant may also have significant cost implications over the life of a geothermal field. Lessons can be learned from power plants built against design specifications that prove unsupported by actual production conditions \citep{manente_hybrid_2011}. Improving the overall economics of geothermal could start with recognizing uncertainties in the system and using those uncertainties to make better decisions on \textit{where to drill} and \textit{how to build}. Providing the appropriate tools and methods to make these decisions will also help oil \& gas companies bridge the gap between traditional business strategies and lower-carbon energy production with geothermal as part of their energy mix.
+
 \section{Research Questions}\label{ch1:researchqs}
 Based on the aforementioned opportunity to integrate uncertainty characterization with geothermal exploration and development decision-making for petroleum companies, this thesis will attempt to address the following research questions:
 
-•	Can geothermal exploration risk be mitigated using insights derived from readily-available data sources? And if gaps exist, can the data highlight additional actions for reducing risk before drilling a geothermal well? 
+\begin{itemize}
+  \item Can geothermal exploration risk be mitigated using insights derived from readily-available data sources? And if gaps exist, can the data highlight additional actions for reducing risk before drilling a geothermal well?
+  \item How can the recognition and characterization of present and future uncertainties influence the development strategy for geothermal facilities? In what ways will such an approach mitigate risk, if at all?
+\end{itemize}
 
-•	How can the recognition and characterization of present and future uncertainties influence the development strategy for geothermal facilities? In what ways will such an approach mitigate risk, if at all?
 \section{Thesis Outline}\label{ch1:outline}
 This thesis is structured as follows: \\ 
 Chapter 2 provides relevant background on geothermal systems and energy capture, followed by a literature review on data-driven risk mitigation methods for exploration and facility planning. Chapters 3-4 explain the sources of data used in the thesis, preparation of that data, and the methods used for predictive analytics (Chapter 3) and cost modeling of geothermal facility project designs (Chapter 4). Also discussed is how uncertainties are defined and incorporated into both thesis focus areas. Chapters 5-6 describe the analytics and modeling results for exploration and development planning, respectively. Finally, Chapter 7 frames the overall results from a systems perspective, and Chapters 8 and 9 provide opportunities for future work and the final thesis conclusions. 
