--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,82 @@
 
+@techreport{williams_assessment_2008,
+	address = {Menlo Park, California},
+	title = {Assessment of moderate-and high-temperature geothermal resources of the {United} {States}},
+	number = {2327-6932},
+	institution = {U.S. Geological Survey},
+	author = {Williams, Colin F and Reed, Marshall J and Mariner, Robert H and DeAngelo, Jacob and Galanis, S Peter},
+	year = {2008},
+}
+
+@techreport{hamm_overview_2019,
+	title = {An {Overview} of the {US} {Department} of {Energy}'s {GeoVision} {Report}},
+	url = {https://www.energy.gov/eere/geothermal/geovision},
+	institution = {National Renewable Energy Lab},
+	author = {Hamm, Susan G and Augustine, Chad R and Tasca, Coryne and Winick, Jeffrey},
+	year = {2019},
+	note = {Publisher: National Renewable Energy Lab.(NREL), Golden, CO (United States)},
+}
+
+@misc{irena_country_2021,
+	title = {Country {Rankings}},
+	url = {/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
+	abstract = {Country Rankings},
+	language = {en},
+	urldate = {2021-06-01},
+	journal = {/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
+	author = {{IRENA}},
+	month = may,
+	year = {2021},
+}
+
+@book{williams_review_2008,
+	title = {A {Review} of {Methods} {Applied} by the {US} {Geological} {Survey} in the {Assessment} {If} {Identified} {Geothermal} {Resources}},
+	publisher = {Citeseer},
+	author = {Williams, Colin F and Reed, Marshall and Mariner, Robert H},
+	year = {2008},
+}
+
+@techreport{liu_overview_2015,
+	address = {Oak Ridge, Tennessee},
+	title = {Overview of {Available} {Low}-{Temperature}/ {Coproduced} {Geothermal} {Resources} in the {United} {States} and the {State} of the {Art} in {Utilizing} {Geothermal} {Resources} for {Space} {Conditioning} in {Commercial} {Buildings}},
+	language = {en},
+	number = {ORNL/TM-2015/131},
+	institution = {Oak Ridge National Laboratory},
+	author = {Liu, Xiaobing and Gluesenkamp, Kyle and Momen, Ayyoub M},
+	month = may,
+	year = {2015},
+	keywords = {co-produced water, geothermal, hydrothermal, low temperature},
+	pages = {18},
+}
+
+@article{hamm_geothermal_2021,
+	title = {Geothermal {Energy} {R}\&{D}: {An} {Overview} of the {U}.{S}. {Department} of {Energy}’s {Geothermal} {Technologies} {Office}},
+	volume = {143},
+	issn = {0195-0738},
+	shorttitle = {Geothermal {Energy} {R}\&{D}},
+	url = {https://doi.org/10.1115/1.4049581},
+	doi = {10.1115/1.4049581},
+	abstract = {Geothermal energy can provide answers to many of America’s essential energy questions. The United States has tremendous geothermal resources, as illustrated by the results of the DOE GeoVision analysis, but technical and non-technical barriers have historically stood in the way of widespread deployment of geothermal energy. The U.S. Department of Energy’s Geothermal Technologies Office within the Office of Energy Efficiency and Renewable Energy has invested more than \$470 million in research and development (R\&amp;D) since 2015 to meet its three strategic goals: (1) unlock the potential of enhanced geothermal systems, (2) advance technologies to increase geothermal energy on the U.S. electricity grid, and (3) support R\&amp;D to expand geothermal energy opportunities throughout the United States. This paper describes many of those R\&amp;D initiatives and outlines future directions in geothermal research.},
+	number = {100903},
+	urldate = {2021-05-31},
+	journal = {Journal of Energy Resources Technology},
+	author = {Hamm, Susan G. and Anderson, Arlene and Blankenship, Douglas and Boyd, Lauren W. and Brown, Elizabeth A. and Frone, Zachary and Hamos, Ian and Hughes, Hannah J. and Kalmuk, Matthew and Marble, Alethia and McKittrick, Alexis M.W. and Metcalfe, Elisabet and Morse, Lindsay J. and Nieto, Angel and Payne, Jonathan and Porse, Sean L. and Prisjatschew, Alexandra and Stutz, George R. and Tasca, Coryne and Vandermeer, William and Watson, Gerry and Weathers, Michael and Winick, Jeffrey},
+	month = feb,
+	year = {2021},
+}
+
+@misc{doe_low_2021,
+	title = {Low {Temperature} {Deep} {Direct}-{Use} {Program} {Draft} {White} {Paper}},
+	url = {https://www.energy.gov/eere/geothermal/low-temperature-deep-direct-use-program-draft-white-paper},
+	abstract = {The GTO is seeking to enable the widespread utilization of lower temperature geothermal resources that are shallower than most conventional hydroth...},
+	language = {en},
+	urldate = {2021-05-31},
+	journal = {Energy.gov},
+	author = {{DOE}},
+	month = may,
+	year = {2021},
+}
+
 @article{lund_characteristics_2007,
 	title = {Characteristics, development and utilization of geothermal resources},
 	journal = {GHC Bulletin, June},
@@ -1658,14 +1736,6 @@ Publisher: Nature Publishing Group},
 	institution = {LA-UR-15-28360},
 	author = {Bielicki, J. and Blackwell, D. and Harp, D. and Karra, S. and Kelley, R. and Kelly, S. and Middleton, R. and Pepin, J. and Person, M. and Sutula, G.},
 	year = {2015},
-}
-
-@article{liu_overview_nodate,
-	title = {{OVERVIEW} {OF} {AVAILABLE} {LOW}-{TEMPERATURE}/{COPRODUCED} {GEOTHERMAL} {RESOURCES} {IN} {THE} {UNITED} {STATES} {AND} {THE} {STATE} {OF} {THE} {ART} {IN} {UTILIZING} {GEOTHERMAL} {RESOURCES} {FOR} {SPACE} {CONDITIONING} {IN} {COMMERCIAL} {BUILDINGS}},
-	language = {en},
-	author = {Liu, Xiaobing and Gluesenkamp, Kyle and Momen, Ayyoub M},
-	keywords = {co-produced water, geothermal, hydrothermal, low temperature},
-	pages = {18},
 }
 
 @article{siler_three-dimensional_2019,
