quick edits to hydrothermal section before getting into EGS

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -51,14 +51,14 @@ If naturally present, the combination of these five elements defines a hydrother
 \begin{figure}[htbp]
 \centering
 \includegraphics[scale=0.27]{Figure-Lassen-mudpot}
-\caption[Mud pot, Lassen National Park]{Active mud pot and geothermal lake with ground staining and sulphur deposits, Lassen National Park, California. Photo credit: Author}
+\caption[Mud pot, Lassen National Park]{Active mud pot and ground staining on the bank of Boiling Springs Lake, Lassen National Park, California. Photo credit: Author}
 \label{fig:lassen-mudpot}
 \end{figure}
 The original geothermal systems exploited by mankind for millennia are hydrothermal systems. Artifacts show proto-Native American use of hydrothermal waters for cleaning and health restoration over 10,000 years ago \citep{doe_history_2021}. The importance of geothermal hot springs for Roman, Japanese, Chinese, and Ottoman baths is also well-established in the historical record \citep{lund_characteristics_2007}. Industrial use began in the 1800s with chemical extraction from geothermal steam, pools, and deposits in Larderello, Italy \citep[~p. 251]{dipippo_geothermal_2012}. \acrlong{gdh} (\acrshort{gdh}), or large-scale heating of residences and businesses using geothermal-produced fluids, was pioneered in Chaudes-Aigues, France in the 1300s and first introduced to the United States in 1892 with an installation in Boise, Idaho \citep{lund_characteristics_2007}.
 
 These few examples capture some of the many potential opportunities for low-temperature (<90\(^\circ C\)) and medium-temperature (<150\(^\circ C\)) geothermal resource use, even beyond hydrothermal systems. GDH can help meet building and water temperature needs, and agriculture, textiles, paper, chemicals, and even the food industry can also benefit from access to low-temperature geothermal fluids \citep{doe_low_2021,liu_overview_2015}. Interest has led to funding from agencies like the \acrlong{gto} (\acrshort{gto}) within the \acrlong{doe} (\acrshort{doe}); a grant was recently awarded to Cornell University in support of piloting a deep direct-use project to provide baseload heating for the university campus supporting peak demand during cold upstate New York winter months  \citep{hamm_geothermal_2021,tester_integrating_2015}.
 
-The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[~p. 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MW), followed by Indonesia (2131 MW) and Philippines (1928 MW) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). A comprehensive assessment of moderate and high-temperature \acrlong{kgra} (\acrshort{kgra}) in the United States found the USGS-surveyed sites have power generation potential of \texttt{\char`\~}9,000 MWe, and an additional \texttt{\char`\~}30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are \texttt{\char`\~}8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of \texttt{\char`\~}16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
+The topic of this thesis instead concerns the use of moderate- to high-temperature geothermal for power generation. The first example of geothermal power production came from Italian experiments in 1904, and the first commercial plant went online in Larderello, Italy in 1914 \citep[~p. 251]{dipippo_geothermal_2012}. Geothermal-generated electricity made its debut in the United States with the development of The Geysers field beginning in 1960 \citep{tester_future_2006}. Hydrothermal plants quickly appeared in New Zealand, Japan, Iceland, Indonesia, Kenya, Philippines and elsewhere throughout the 1970s-1980s, with continued growth through to present-day \citep{lund_characteristics_2007}. 2020 statistics from the \acrlong{irena} (\acrshort{irena}) place the United States as world leader in geothermal installed capacity (2587 MW), followed by Indonesia (2131 MW) and Philippines (1928 MW) \citep{irena_country_2021} (Figure \ref{fig:irena-rank}). 
 
 \begin{figure}[htbp]
 \centering
@@ -66,6 +66,8 @@ The topic of this thesis instead concerns the use of moderate- to high-temperatu
 \caption[Country rankings, installed geothermal capacity ]{Countries ranked by installed geothermal capacity, from \protect\citep{irena_country_2021}}
 \label{fig:irena-rank}
 \end{figure}
+
+A comprehensive assessment of moderate and high-temperature \acrlong{kgra} (\acrshort{kgra}) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of \texttt{\char`\~}9,000 MWe, and an additional \texttt{\char`\~}30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are \texttt{\char`\~}8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of \texttt{\char`\~}16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
 
 \subsubsection{Enhanced Geothermal Systems}
 
